分页开始出现问题 day12 3.页面分页效果

--- a/search.html
+++ b/search.html
@@ -295,8 +295,8 @@
                     <div class="top-pagination">
                         <span>共 <i style="color: #222;">7600+</i> 商品</span>
                         <span><i style="color: red;">2</i>/123</span>
-                        <a class="btn-arrow" href="#" style="display: inline-block">&lt;</a>
-                        <a class="btn-arrow" href="#" style="display: inline-block">&gt;</a>
+                        <a class="btn-arrow" @click="prevPage" style="display: inline-block">&lt;</a>
+                        <a class="btn-arrow" @click="nextPage" style="display: inline-block">&gt;</a>
                     </div>
                 </div>
             </div>
@@ -340,34 +340,26 @@
             </div>
             <div class="fr">
                 <div class="sui-pagination pagination-large">
-                    <ul>
-                        <li class="prev disabled">
-                            <a href="#">«上一页</a>
+                    <ul style="width: 550px">
+                        <li :class="{prev:true,disabled:search.page === 1}">
+                            <a @click="prePage">«上一页</a>
                         </li>
-                        <li class="active">
-                            <a href="#">1</a>
+                        <li :class="{active: index(i) === search.page}" v-for="i in Math.min(5,totalPage)" :key="i">
+                            <a @click="search.page=index(i)">{{index(i)}}</a>
                         </li>
-                        <li>
-                            <a href="#">2</a>
-                        </li>
-                        <li>
-                            <a href="#">3</a>
-                        </li>
-                        <li>
-                            <a href="#">4</a>
-                        </li>
-                        <li>
-                            <a href="#">5</a>
-                        </li>
-                        <li class="dotted"><span>...</span></li>
-                        <li class="next">
-                            <a href="#">下一页»</a>
+                        <li class="dotted" v-show="totalPage > 5"><span>...</span></li>
+                        <li :class="{next:true,disabled:search.page === totalPage}">
+                            <a @click="nextPage">下一页»</a>
                         </li>
                     </ul>
-                    <div><span>共10页&nbsp;</span><span>
-      到第
-      <input type="text" class="page-num">
-      页 <button class="page-confirm" onclick="alert(1)">确定</button></span></div>
+                    <div>
+                        <span>共{{totalPage}}页&nbsp;</span>
+                        <span>
+            到第
+            <input type="text" class="page-num" :value="search.page">
+            页 <button class="page-confirm" onclick="alert(1)">确定</button>
+        </span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -477,7 +469,11 @@
             loadData(){
                 // ly.http.post("/search/page", ly.stringify(this.search)).then(resp=>{
                 ly.http.post("/search/page", this.search).then(({data})=>{
-
+                    if(data.items.length === 0){
+                        return
+                    }
+                    this.total = data.total;
+                    this.totalPage = data.totalPage;
                     //处理结果集数据
                     data.items.forEach(goods =>{
                         //转换skus: 将字符串转化为对象
@@ -488,6 +484,27 @@
                     //初始化goodsList
                     this.goodsList = data.items;
                 });
+            },
+            index(i){
+                if(this.search.page <= 3 || this.totalPage <= 5){
+                    // 如果当前页小于等于3或者总页数小于等于5
+                    return i;
+                } else if(this.search.page > 3) {
+                    // 如果当前页大于3
+                    return this.search.page - 3 + i;
+                } else {
+                    return this.totalPage - 5 + i;
+                }
+            },
+            prevPage(){
+                if(this.search.page > 1){
+                    this.search.page--
+                }
+            },
+            nextPage(){
+                if(this.search.page < this.totalPage){
+                    this.search.page++
+                }
             }
         },
         created(){
@@ -503,6 +520,19 @@
             this.search = search;
             // 发起请求，根据条件搜索
             this.loadData();
+        },
+        watch:{
+            search:{
+                deep:true,
+                handler(val,old){
+                    if(!old || !old.key){
+                        // 如果旧的search值为空，或者search中的key为空，证明是第一次
+                        return;
+                    }
+                    // 把search对象变成请求参数，拼接在url路径
+                    window.location.href = "http://www.leyou.com/search.html?" + ly.stringify(val);
+                }
+            }
         },
 
         components:{
