fix(商品管理):修复分页失效的bug

--- a/search.html
+++ b/search.html
@@ -100,18 +100,18 @@
             <!--面包屑-->
             <ul class="fl sui-breadcrumb">
                 <li><span>全部结果:</span></li>
-                <li ><a href="#">手机</a></li>
-                <li ><span>手机通讯</span></li>
+                <li v-for="(c,i) in breads":key="i">
+                    <a href="#" v-if="i<2">{{c.name}}</a>
+                    <span v-else>
+                        {{c.name}}
+                    </span>
+                </li>
             </ul>
             <!--已选择过滤项-->
             <ul class="tags-choose">
-                <li class="tag">
-                    品牌:<span style="color: red">apple</span>
-                    <i class="sui-icon icon-tb-close"></i>
-                </li>
-                <li class="tag">
-                    内存:<span style="color: red">4G</span>
-                    <i class="sui-icon icon-tb-close"></i>
+                <li class="tag" v-for="(v,k) in search.filter" v-if="k !== 'cid3'" :key="k">
+                    {{k === 'brandId' ? '品牌' : k}}:<span style="color: red">{{getFilterValue(k,v)}}</span>
+                    <i class="sui-icon icon-tb-close" @click="removeFilter(k)"></i>
                 </li>
             </ul>
             <div class="clearfix"></div>
@@ -132,28 +132,27 @@
                 </div>
                 <div class="fl ext"></div>
             </div>
-            <div class="type-wrap logo">
-                <div class="fl key brand">品牌</div>
+            <div class="type-wrap" v-for="(f,i) in filters" :key="i" v-if="f.k !== '品牌'" v-show="i<5 || show">
+                <div class="fl key">{{f.k}}</div>
+                <div class="fl value">
+                    <ul class="type-list">
+                        <li v-for="(option, j) in f.options" :key="j" @click="selectFilter(f.k,option)">
+                            <a>{{option.name}}</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="fl ext"></div>
+            </div>
+            <div class="type-wrap logo" v-else>
+                <div class="fl key brand">{{f.k}}</div>
                 <div class="value logos">
                     <ul class="logo-list">
-                        <li><img src="img/_/phone01.png" /></li>
-                        <li><img src="img/_/phone02.png" /></li>
-                        <li><img src="img/_/phone03.png" /></li>
-                        <li><img src="img/_/phone04.png" /></li>
-                        <li><img src="img/_/phone05.png" /></li>
-                        <li><img src="img/_/phone06.png" /></li>
-                        <li><img src="img/_/phone07.png" /></li>
-                        <li><img src="img/_/phone08.png" /></li>
-                        <li><img src="img/_/phone09.png" /></li>
-                        <li><img src="img/_/phone10.png" /></li>
-                        <li><img src="img/_/phone11.png" /></li>
-                        <li><img src="img/_/phone12.png" /></li>
-                        <li><img src="img/_/phone13.png" /></li>
-                        <li><img src="img/_/phone14.png" /></li>
-                        <li><img src="img/_/phone05.png" /></li>
-                        <li><img src="img/_/phone06.png" /></li>
-                        <li><img src="img/_/phone07.png" /></li>
-                        <li style="text-align: center"><a style="line-height: 30px; font-size: 12px" href="#">黑马</a></li>
+                        <li v-for="(option, j) in f.options" v-if="option.image" @click="selectFilter(f.k,option)">
+                            <img :src="option.image" />
+                        </li>
+                        <li style="text-align: center" v-else @click="selectFilter(f.k,option)">
+                            <a style="line-height: 30px; font-size: 12px" href="#">{{option.name}}</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="fl ext">
@@ -263,10 +262,10 @@
                 </div>
             </div>
             <div class="type-wrap" style="text-align: center">
-                <v-btn small flat>
+                <v-btn small flat @click="show = true" v-show="!show">
                     更多<v-icon>arrow_drop_down</v-icon>
                 </v-btn>
-                <v-btn small="" flat>
+                <v-btn small="" flat @click="show = false" v-show="show">
                     收起<v-icon>arrow_drop_up</v-icon>
                 </v-btn>
             </div>
@@ -276,20 +275,24 @@
             <div class="sui-navbar">
                 <div class="navbar-inner filter">
                     <ul class="sui-nav">
-                        <li class="active">
+                        <li class="{active :!search.sortBy}" @click="search.sortBy =''">
                             <a href="#">综合</a>
                         </li>
                         <li>
                             <a href="#">销量</a>
                         </li>
-                        <li>
+                        <li @click="search.sortBy='createTime'" :class="{active: search.sortBy==='createTime'}">
                             <a href="#">新品</a>
                         </li>
                         <li>
                             <a href="#">评价</a>
                         </li>
-                        <li>
-                            <a href="#">价格</a>
+                        <li @click="search.sortBy='price'; search.descending = !search.descending"
+                            :class="{active: search.sortBy==='price'}">
+                            <a href="#">价格
+                                <v-icon v-show="search.descending">arrow_drop_down</v-icon>
+                                <v-icon v-show="!search.descending">arrow_drop_up</v-icon>
+                            </a>
                         </li>
                     </ul>
                     <div class="top-pagination">
@@ -459,11 +462,14 @@
             ly,
             search:{
                 key: "", // 搜索页面的关键字
-                page: 1
+                page: 1,
+                filter:{} //发送到后台的过滤项
             },
             goodsList:[], //接收搜索到的结果
             total: 0, //总条数
-            totalPage: 0 //总页数
+            totalPage: 0, //总页数
+            filters:[], // 过滤参数集合
+            show: false //是否展示更多过滤条件
         },
         methods: {
             loadData(){
@@ -483,7 +489,43 @@
                     });
                     //初始化goodsList
                     this.goodsList = data.items;
+                    if(data.categories.length === 1 ){
+                        //如果只有一个那么就查询三级商品分类，展示到面包屑
+                        ly.http.get("/item/category/all/level?id="+data.categories[0].id)
+                            .then(resp=>this.breads = resp.data);
+                    }
+                    //初始化分类过滤项
+                    this.filters.push({
+                        k:"分类",
+                        options:data.categories
+                    });
+                    //初始化品牌过滤项
+                    this.filters.push({
+                        k:"品牌",
+                        options:data.brands
+                    });
+                    //初始化其他参数
+                    data.specs.forEach(spec =>{
+                        spec.options = spec.options.map( o=>({name : o}));
+                        this.filters.push(spec);
+                    });
                 });
+            },
+            getFilterValue(k,v){
+                // 如果没有过滤参数，我们跳过展示
+                if(!this.filters || this.filters.length === 0){
+                    return null;
+                }
+                let filter = null;
+                // 判断是否是品牌
+                if(k === 'brandId'){
+                    // 返回品牌名称
+                    return this.filters.find(f => f.k === 'brandId').options[0].name;
+                }
+                return v;
+            },
+            removeFilter(k){
+                this.search.filter[k] = null;
             },
             index(i){
                 if(this.search.page <= 3 || this.totalPage <= 5){
@@ -505,6 +547,15 @@
                 if(this.search.page < this.totalPage){
                     this.search.page++
                 }
+            },
+            selectFilter(k, o){
+                const obj = {};
+                Object.assign(obj, this.search);
+                if(k === '分类' || k === '品牌'){
+                    o = o.id;
+                }
+                obj.filter[k] = o.name || o;
+                this.search = obj;
             }
         },
         created(){
@@ -516,12 +567,29 @@
             const search = ly.parse(location.search.substring(1));
             //对page进行初始化，防止第一次访问时page为空
             search.page = search.page ? parseInt(search.page) : 1;
+            //对排序进行初始化，默认为""代表不排序
+            search.sortBy = search.sortBy || "";
+            //对排序方式进行初始化，转为bool类型
+            search.descending = search.descending === "true" || false;
+            //对过滤对象进行初始化
+            search.filter = search.filter || {};
             //保存到vue本地
             this.search = search;
             // 发起请求，根据条件搜索
             this.loadData();
         },
-        //TODO watch有问题
+        computed:{
+            remainFilters(){
+                const keys = Object.keys(this.search.filter);
+                if(this.search.filter.cid3){
+                    keys.push("cid3")
+                }
+                if(this.search.filter.brandId){
+                    keys.push("brandId")
+                }
+                return this.filters.filter(f => !keys.includes(f.k) && f.options.length > 1);
+            }
+        },
         watch:{
             search:{
                 deep:true,
