--- a/cart.html
+++ b/cart.html
@@ -42,29 +42,30 @@
 
                     <div class="cart-body">
                         <div class="cart-list">
-                            <ul class="goods-list yui3-g">
+                            <ul class="goods-list yui3-g" v-for="(cart,i) in carts" :key="i">
                                 <li class="yui3-u-1-24">
                                     <input type="checkbox" name="" value="" />
                                 </li>
                                 <li class="yui3-u-11-24">
                                     <div class="good-item">
-                                        <div class="item-img"><img src="img/goods.png" width="80px" height="80px"/></div>
+                                        <div class="item-img"><img :src="cart.image" width="80px" height="80px"/></div>
                                         <div class="item-msg">
-												<span style="line-height:70px ">
-													Apple Macbook Air 13.3英寸笔记本电脑 银色（Corei5）处理器/8GB内存
-														尺寸：13.3英寸
+												<span >
+                                                    {{cart.title}} <br/>
+													<span v-for="(v,k) in JSON.parse(JSON.parse(cart.ownSpec))"
+                                                          :key="k">{{v}}<br/></span>
 												</span>
                                         </div>
                                     </div>
                                 </li>
 
-                                <li class="yui3-u-1-8"><span style="line-height:70px " class="price">8848.00</span></li>
+                                <li class="yui3-u-1-8"><span style="line-height:70px " class="price">{{ly.formatPrice(cart.price)}}</span></li>
                                 <li class="yui3-u-1-8" style="padding-top: 20px">
                                     <a href="javascript:void(0)" class="increment mins">-</a>
-                                    <input autocomplete="off" type="text" value="1" minnum="1" class="itxt" />
+                                    <input autocomplete="off" type="text" value="1" v-model="cart.num" minnum="1" class="itxt" />
                                     <a href="javascript:void(0)" class="increment plus">+</a>
                                 </li>
-                                <li class="yui3-u-1-8"><span style="line-height:70px " class="sum">8848.00</span></li>
+                                <li class="yui3-u-1-8"><span style="line-height:70px " class="sum">{{ly.formatPrice(cart.price * cart.num)}}</span></li>
                                 <li class="yui3-u-1-8">
                                     <a href="#none">删除</a><br />
                                     <a href="#none">移到我的关注</a>
