fix(day18购物车):finish

--- a/cart.html
+++ b/cart.html
@@ -282,7 +282,10 @@
                 // 先判断登录状态
                 ly.verifyUser().then(() => {
                     // 已登录
-
+                    ly.http.get("/cart").then(({data}) => {
+                        this.carts = data;
+                        this.selected = this.carts;
+                    });
                 }).catch(() => {
                     // 未登录
                     this.carts = ly.store.get("carts");
@@ -292,7 +295,7 @@
             increment(c) {
                 c.num++;
                 ly.verifyUser().then(() => {
-                    // TODO 已登录，向后台发起请求
+                    ly.http.put("/cart",{skuId: c.skuId,num: c.num});
                 }).catch(() => {
                     // 未登录，直接操作本地数据
                     ly.store.set("carts", this.carts);
@@ -304,7 +307,7 @@
                 }
                 c.num--;
                 ly.verifyUser().then(() => {
-                    // TODO 已登录，向后台发起请求
+                    ly.http.put("/cart",{skuId: c.skuId,num: c.num});
                 }).catch(() => {
                     // 未登录，直接操作本地数据
                     ly.store.set("carts", this.carts);
@@ -312,7 +315,9 @@
             },
             deleteCart(i){
                 ly.verifyUser().then(res=>{
-                    // TODO，已登录购物车
+                    ly.http.delete("/cart"+this.carts[i].skuId).then(()=>{
+                        this.carts.splice(i,1);
+                    });
                 }).catch(()=>{
                     // 未登录购物车
                     this.carts.splice(i, 1);
