--- a/cart.html
+++ b/cart.html
@@ -93,7 +93,7 @@
                         <span><em>已节省：</em><i>-¥20.00</i></span>
                     </div>
                     <div class="sumbtn">
-                        <a class="sum-btn"  href="getOrderInfo.html"  target="_blank">结算</a>
+                        <a class="sum-btn"  href="#" @click.prevent="toOrderInfo"  target="_blank">结算</a>
                     </div>
                 </div>
             </div>
@@ -322,6 +322,19 @@
                     // 未登录购物车
                     this.carts.splice(i, 1);
                     ly.store.set("carts", this.carts);
+                })
+            },
+            toOrderInfo() {
+                // 判断是否登录
+                ly.verifyUser().then(() => {
+                    // 已登录
+                    //保存已选购物车记录放到localstorage当中
+                    ly.store.set("selectedCarts",this.selected);
+                    //跳转到订单页面
+                    window.location.href = "/getOrderInfo.html"
+                }).catch(() => {
+                    // 未登录
+                    window.location.href = "/login.html?returnUrl=" + window.location.href;
                 })
             }
         },
